# recommender_system

./: .gitignore  README.md  fetch-data-from-kaggle.sh  pyproject.toml
recommender_api/: __init__.py
recommender_api/api/: controller.py  main.py
recommender_api/api/schema/: __init__.py  rec_response_schema.py
recommender_model_package/recommender_model_package/: __init__.py  config.yml  recommendation.py  train_model.py
recommender_model_package/recommender_model_package/config/: core.py
recommender_model_package/recommender_model_package/data_processing/: data_manager.py  preprocessor.py
recommender_model_package/recommender_model_package/encoders/: service_encoder_v0.1.0.pkl
research/: mlflow.db  recommender_system.ipynb
