[tool.poetry]
name = "recommender-model-package"
version = "0.1.0"
description = ""
authors = ["chibuikeeugene <chibuikeeugene@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
numpy = "^1.26.4"
tqdm = "^4.66.4"
feature-engine = "^1.8.0"
mlflow = "^2.13.0"
tensorflow = "^2.16.1"
scikit-surprise = "^1.1.4"
pydantic = "^2.7.2"
strictyaml = "^1.7.3"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
ipykernel = "^6.29.4"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
tox = "^4.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
